nsis (2.46-4) unstable; urgency=low

  * Run architecture independent build process only when demanded.
  * Split NSIS package into four packages:
    - compiler and utilities (architecture dependent)
    - plugins, stubs and resource files (win32)
    - header and library files for developing NSIS plugins (win32)
    - examples and HTML documentation (architecture independent)

 -- Thomas Gaugler <thomas@dadie.net>  Tue, 19 Apr 2011 19:20:38 +0000

nsis (2.46-3) experimental; urgency=low

  * Fixed warnings of missing elements occuring in man page generation
  * Use variant_dir instead of build_dir keyword in SConstruct file
  * Run complete set of tests independent of architecture
  * Removed the option to build with the orphaned gcc-mingw32
  * Removed architecture restrictions
  * Updated to Standards-Version 3.9.1

 -- Thomas Gaugler <thomas@dadie.net>  Sun, 07 Nov 2010 17:30:30 +0000

nsis (2.46-2) unstable; urgency=low

  * Updated zlib patch with changes from upstream subversion repository
  * Made embedded inflate function compatible with zlib (Closes: #579407)
  * Exclude unneeded win32-only utilities from building
  * Build makensis and portable utilities natively for amd64

 -- Thomas Gaugler <thomas@dadie.net>  Wed, 05 May 2010 20:39:58 +0000

nsis (2.46-1) unstable; urgency=low

  [ Thomas Gaugler ]
  * New upstream release
  * Switch to 3.0 (quilt) source format
  * Use the system provided compression library of zlib
  * Switch to debhelper 7's minimal rules file mode

  [ Paul Wise ]
  * Link against the 32-bit zlib on amd64 to prevent FTBFS

 -- Thomas Gaugler <thomas@dadie.net>  Tue, 22 Dec 2009 18:53:50 +0000

nsis (2.45-1) unstable; urgency=low

  * New upstream release
  * Adopted package from Paul Wise with his permission
  * Allow building with either gcc-mingw32 (>= 4.4.0-3) or mingw32
  * Fixed occurring access violation in Math plugin once the 
    installer window is closed.
