@@ -1,5 +1,3 @@
-nsis-pluginapi: arch-independent-package-contains-binary-or-object ./usr/i586-mingw32msvc/lib/nsis/libpluginapi.a
-nsis-pluginapi: non-standard-dir-in-usr usr/i586-mingw32msvc/
-nsis-pluginapi: file-in-unusual-dir usr/i586-mingw32msvc/include/nsis/api.h
-nsis-pluginapi: file-in-unusual-dir usr/i586-mingw32msvc/include/nsis/pluginapi.h
-nsis-pluginapi: file-in-unusual-dir usr/i586-mingw32msvc/lib/nsis/libpluginapi.a
+nsis-pluginapi: arch-independent-package-contains-binary-or-object
+nsis-pluginapi: non-standard-dir-in-usr
+nsis-pluginapi: file-in-unusual-dir
